force-app/main/default/objects/SPEN_MobileFormSetting__mdt/SPEN_MobileFormSetting__mdt.object-meta.xml
<CustomObject>
    <description>CMDT used in the Field Service Mobile App to display the list of forms that can be invoked by the LWC (for non-work related data capture forms).</description>
    <label>SPEN Field Service Mobile Form Setting</label>
    <pluralLabel>SPEN Field Service Mobile Form Settings</pluralLabel>
</CustomObject>