force-app/main/default/objects/SPEN_MobileFormSetting__mdt/fields/SPEN_FormDeepLink__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FormDeepLink__c</fullName>
    <description>Field used to store the form deeplink to be invoked in the LWC on the FS Mobile App.</description>
    <label>Form DeepLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>