force-app/main/default/objects/SPEN_MobileFormSetting__mdt/fields/SPEN_isActive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field used to identify if the cmdt is active or not</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>