force-app/main/default/objects/SPEN_MobileFormSetting__mdt/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
                <default>true</default>
                <label>Flow</label>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>